--- a/str/sdd.html
+++ b/str/sdd.html
@@ -15,9 +15,9 @@
 	<h3>Запуск библиотеки lib32-ERROR...</h3>
 	<h3>Скачивание файла ERROR.vbs...</h3>
 	<h3>Запуск файла ERROR.vbs...</h3>
-	<h3>Запрос на получение root-прав для файла androidERROR.apk...</h3>
+	<h3>Запрос на получение root-прав для файла ERROR.vbs...</h3>
 	<h3>Запрос одобрен...</h3>
-	<h3>Активация скрипта сброса настроек для Android "не удалось определить"...</h3>
+	<h3>Активация скрипта сброса настроек для "не удалось определить"...</h3>
 	<h3>Попытка определения...</h3>
 	<h3>Попытка определения не удалась...</h3>
 	<h3>Сброс настроек для "не удалось определить"...</h3>	
